<resources>
    <string name="app_name">Walkies</string>
    <string name="button_addwalkiesLocation">Add Walkies Location</string>
    <string name="hint_walkiesLocationTitle">Walkies Location Title</string>
    <string name="hint_walkiesLocationDescription">Description </string>
    <string name="menu_addwalkiesLocation">Add</string>
    <string name="menu_cancelwalkiesLocation">Cancel</string>
    <string name="enter_walkiesLocation_title">Please enter a Title For The Walkies Location </string>
    <string name="save_walkiesLocation"> Save Location </string>
    <string name="button_addImage"> Add Image </string>
    <string name="select_walkiesLocation_image">Select image</string>
    <string name="change_walkiesLocation_image">Change image</string>
    <string name="button_location">Set Location</string>
    <string name="title_activity_map">Map</string>
    <string name="menu_delete_walkiesLocation">Delete</string>
    <string name="title_activity_walkies_maps">Locations For Walkies</string>
    <string name="walkies_map_text_view_placeholder">Click a dog to view your walkies location!</string>
    <string name="location_error_message">Please choose a location</string>
    <string name="save_walkies_location">Save Walkies Location</string>
</resources>